# agent-builder

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.sh  stop.sh
.claude/.ralph/: ralph-loop.0.0.1.md
backend/: agent.py  config.py  main.py  persistence.py
backend/api/: __init__.py  dependencies.py
backend/api/v1/: __init__.py  agents.py  auth.py  chat.py  credentials.py  memory.py  settings.py  skills.py  tools.py  (+2 more)
backend/application/: __init__.py  builder.py
backend/auth/: __init__.py  google_oauth.py
backend/config/: templates.json  tools.json  wizard_prompt.md
backend/domain/: __init__.py  entities.py  exceptions.py  ports.py  services.py
backend/infrastructure/: __init__.py
backend/migration/: __init__.py  json_to_sqlite.py  seed_templates.py
backend/subagents/: __init__.py  calendar_context.py
backend/tests/: __init__.py  test_memory_security.py
backend/tools/: __init__.py  calendar.py  gmail.py
backend/triggers/: __init__.py  email_polling.py
docs/: langsmith-agent-builder-prd-beta.md  product-design-research.md  roadmap.md  v0.0.2-plans.md
docs/dev/: adding-tools.md  api-reference.md  architecture.md  mcp-integration.md
docs/product-research/: insights.md  langsmith.md
docs/user-guide/: creating-agents.md  getting-started.md  memory-and-skills.md  tools-reference.md  troubleshooting.md
docs/v0.0.1-email-assistant/: design.md  feature-dev-impl-spec.md  system-instruction.md
docs/v0.0.3-agent-learning/: design.md  prd.md  review-plan.md  user-journey.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/.claude/: ralph-loop.local.md
frontend/src/: App.tsx  index.css
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_agents.py
tests/domain/: __init__.py  test_entities.py
tests/e2e/: __init__.py  test_agent_execution.py  test_core_workflow.py
tests/infrastructure/: __init__.py  test_agent_repo.py
(+64 files in other folders)
