[project]
name = "agent-builder"
version = "0.0.1"
description = "Email assistant agent builder with human-in-the-loop approval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "deepagents>=0.3.5",
    "langchain-anthropic>=0.3.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
agent-builder = "backend.main:run"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
