[project]
name = "agent-builder"
version = "0.0.3"
description = "Generic agent builder platform with chat-based creation, MCP tools, and HITL approval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "deepagents>=0.3.5",
    "anthropic>=0.40.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    # v0.0.2 additions
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
    # v0.0.3 additions
    "langgraph-checkpoint-sqlite>=2.0.0",
    "python-frontmatter>=1.1.0",
    "slack-sdk>=3.27.0",
    "requests>=2.31.0",
    "tavily-python>=0.3.0",
]

[project.scripts]
agent-builder = "backend.main:run"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "greenlet>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
